--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Journal 1"
+title: "Data cleaning"
 #bibliography: references.bib
-author: "Your Name"
+author: "Bas Hofstra"
 ---
 
 
@@ -37,6 +37,7 @@ This is just an example page of your `r colorize("lab journal", "red")`.
 
 ----
 
+Data cleaning
 
 ```{r}
 print("Hello Lab Journal")
